--- a/src/main/resources/templates/group/groupDetails.html
+++ b/src/main/resources/templates/group/groupDetails.html
@@ -114,7 +114,7 @@
                                             <div id="map" style="width:500px; height: 500px; margin-left: auto; margin-right: auto"></div>
                                             <script th:inline="javascript">
                                                 var map;
-                                                var gmarkers = [];
+                                                var marker;
                                                 function initMap() {
                                                     console.log('initMap');
 
@@ -122,25 +122,29 @@
                                                         center: {lat: -34.397, lng: 150.644},
                                                         zoom: 8
                                                     });
-
-                                                    new google.maps.event.addListener(map, 'click', function(event) {
+                                                    google.maps.event.addListener(map, 'click', function(event) {
                                                         placeMarker(event.latLng);
                                                     });
-
-                                                    function placeMarker(location) {
-                                                        gmarkers = [];
-                                                        var marker = new google.maps.Marker({
+                                                }
+                                                function placeMarker(location) {
+                                                    if ( marker ) {
+                                                        marker.setPosition(location);
+                                                    } else {
+                                                        marker = new google.maps.Marker({
                                                             position: location,
                                                             map: map
                                                         });
-                                                        gmarkers.push(marker);
                                                     }
+                                                    console.log(marker.getPosition().lat());
+                                                    console.log(marker.getPosition().lng());
                                                 }
+
+
                                             </script>
                                             <script>
 
                                             </script>
-                                            <script th:inline="javascript" async="async" defer="defer" src="https://maps.googleapis.com/maps/api/js?key=apiKey&callback=initMap"></script>
+                                            <script th:inline="javascript" async="async" defer="defer" src="https://maps.googleapis.com/maps/api/js?key=apikey&callback=initMap"></script>
 
 
                                         </div>
