--- a/src/main/resources/templates/group/groupDetails.html
+++ b/src/main/resources/templates/group/groupDetails.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" th:href="@{/css/addons/datatables.min.css}"/>
     <!-- DataTables JS -->
     <script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 <div th:replace="common/header :: header"></div>
@@ -97,6 +99,10 @@
                                             </div>
                                             <input type="hidden" th:attr="name=groupId" class="form-control"
                                                    th:value="${groupId}"/>
+                                            <input type="hidden" th:attr="name=lat" class="form-control" id="groupLat"
+                                                   th:value="${travelGroupDto.lat}"/>
+                                            <input type="hidden" th:attr="name=lng" class="form-control" id="groupLng"
+                                                   th:value="${travelGroupDto.lng}"/>
                                             <div class="form-group">
                                                 <button type="submit"
                                                         class="btn btn-blue btn-block my-2 waves-effect z-depth-0">
@@ -117,14 +123,27 @@
                                                 var marker;
                                                 function initMap() {
                                                     console.log('initMap');
-
+                                                    let curLat = [[${travelGroupDto.lat}]] ;
+                                                    let curLng = [[${travelGroupDto.lng}]];
+                                                    if(!curLat){
+                                                        curLat = 52.237049
+                                                    }
+                                                    if(!curLng){
+                                                        curLng = 21.017532
+                                                    }
+                                                    console.log(curLat);
+                                                    console.log(curLng);
                                                     map = new google.maps.Map(document.getElementById('map'), {
-                                                        center: {lat: -34.397, lng: 150.644},
+                                                        center: {
+                                                            lat: curLat,
+                                                            lng: curLng},
                                                         zoom: 8
                                                     });
                                                     google.maps.event.addListener(map, 'click', function(event) {
+                                                        console.log(event.latLng)
                                                         placeMarker(event.latLng);
                                                     });
+
                                                 }
                                                 function placeMarker(location) {
                                                     if ( marker ) {
@@ -135,8 +154,12 @@
                                                             map: map
                                                         });
                                                     }
-                                                    console.log(marker.getPosition().lat());
-                                                    console.log(marker.getPosition().lng());
+                                                    const selectedLat = marker.getPosition().lat();
+                                                    const selectedLng = marker.getPosition().lng();
+                                                    $('#groupLat').val(selectedLat);
+                                                    $('#groupLng').val(selectedLng);
+                                                    console.log(selectedLat);
+                                                    console.log(selectedLng);
                                                 }
 
 
@@ -144,7 +167,7 @@
                                             <script>
 
                                             </script>
-                                            <script th:inline="javascript" async="async" defer="defer" src="https://maps.googleapis.com/maps/api/js?key=apikey&callback=initMap"></script>
+                                            <script th:inline="javascript" async="async" defer="defer" src="https://maps.googleapis.com/maps/api/js?key=apiKey&callback=initMap"></script>
 
 
                                         </div>
